--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pinhole-camera",
   "version": "1.0.0",
+  "homepage": "./", 
   "description": "Interactive Pinhole Camera Experiment",
   "scripts": {
     "dev": "webpack serve",
